# kn7072

./: .black  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .project  README.md  dict_class.py  new.txt  pyproject.toml  t.ini  w.docx  ЭКСПЕРИМЕНТ.txt
ANKI/: 4000 Essential English Words_1.txt  4000 Essential English Words_2.txt  American Oxford 5000.txt  Readme.md  anki_to_json.py  create_file_for_anki.py  create_files_words.py  create_words_txt.py  diff_union_and_words.py  mnemonic_words.txt  parse_file_4000.py  passed_words.txt  play_sound.py  show_word.py  sound_word.py  start_script.py  words.json  words_txt.txt  ПОВТОРИТЬ.txt  Предложения.txt
AutoIt/: max.py  mt4_click.py  notpad.py  pyfib.py  wealthlab.py
BASH/: case.sh  celluloid_size.bash  english_sentence_check.bash  fun_1  grep_verb.bash  hallo_world  ln_pictures.bash  macmilan.sh  memory_consumption.bash  reqular  search_ph300.bash  search_word.bash  service_bufer.bash  size_window  start.sh  start_docker_pg.sh  test.sh  touch_set.sh  trace.sh  vlc_size.bash
C/: crags_for_c  readme.md
DOCKER/: docker_network.md
EnglishSimulate/: Samvel Garibjan - Chudo-slovar' Samvela Garibjana. Anglijskij bez anglijskogo - 2008-389-414.rtf  core_words.py  craate_oxford.py  main.py  play_audio.py  test.txt  word_sanstv.py
GIT/: .gitconfig  GIT.txt  extMerge  git_alias.md  readme.md  search.md
GO/: gopls.md
HTML/: HTML_REPORT.7z  beautiful_diff.py  create_index.py  response.json  response_list.json  test_git_diff.py
Linux/: .bashrc  .profile  ansible.md  awk.md  config  env.md  inotify  lsof.md  (+4 more)
(+19477 files in other folders)
