[tool.poetry]
name = "kn7072"
version = "0.1.0"
description = ""
authors = ["stepan <stepan@yandex.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.12.8"
numpy = "^2.2.1"
pillow = "^11.1.0"

[tool.black]
line-length = 100
extend-exclude = '''
(
  .vscode
)
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
skip_gitignore = true

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"
pre-commit = "^3.7.1"
flake8-bugbear = "^24.4.26"
jupyterlab = "^4.2.3"
ipykernel = "^6.29.5"
flake8-commas = "^4.0.0"
flake8-builtins = "^2.5.0"
flake8-variables-names = "^0.0.6"
flake8-import-order = "^0.18.2"
flake8-functions = "^0.0.8"
flake8-class-attributes-order = "^0.1.3"
flake8-expression-complexity = "^0.0.11"
flake8-cognitive-complexity = "^0.1.0"
flake8-annotations = "^3.1.1"
flake8-docstrings = "^1.7.0"
ollama = "^0.3.3"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
